Add a Grunt task to publish to GitHub Pages

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "grunt-embed": "*",
     "grunt-lsc": "*",
     "grunt-requirejs": "*",
-    "grunt-svgmin": "*"
+    "grunt-svgmin": "*",
+    "grunt-gh-pages": "*"
   }
 }
