Mark license and Markdown files as text

--- a/.gitattributes
+++ b/.gitattributes
@@ -7,6 +7,8 @@
 /.git* text
 /Gruntfile.coffee text
 /package.json text
+/LICENSE text
+/*.md text
 
 # Finally, we tag our source code files.
 *.html text
