Add RequireJS' domReady plugin to the build
This is the beginning of an attempt to reduce our dependency on jQuery.

--- a/.gitmodules
+++ b/.gitmodules
@@ -20,3 +20,6 @@
 [submodule "RequireJS text"]
 	path = vendor/requirejs-text
 	url = https://github.com/requirejs/text.git
+[submodule "RequireJS domReady"]
+	path = vendor/requirejs-domready
+	url = https://github.com/requirejs/domReady.git
