--- a/.gitmodules
+++ b/.gitmodules
@@ -23,3 +23,6 @@
 [submodule "RequireJS domReady"]
 	path = vendor/requirejs-domready
 	url = https://github.com/requirejs/domReady.git
+[submodule "Leaflet.Control.Search"]
+	path = vendor/leaflet-search
+	url = https://github.com/stefanocudini/leaflet-search.git
