Redesign the top bar
The topbar has been replaced by a Bootstrap's navbar.  As our Bootstrap
build didn't include the required new styles, it was updated to v3.1.0.

With the new topbar design, the message bar can now simply fade in and
out above it.  Such an animation doesn't need jQuery, and removing this
dependency from the `messagebar` module makes our codebase jQuery-free.

--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "grunt-contrib-stylus": "*",
     "grunt-contrib-uglify": "*",
     "grunt-embed": "*",
+    "grunt-gh-pages": "*",
     "grunt-lsc": "*",
     "grunt-requirejs": "*",
     "grunt-svgmin": "*",
-    "grunt-gh-pages": "*"
+    "grunt-wrap": "*"
   }
 }
