Recompile Stylus files as needed on development mode

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "grunt-lsc": "*",
     "grunt-requirejs": "*",
     "grunt-svgmin": "*",
-    "grunt-wrap": "*"
+    "grunt-wrap": "*",
+    "stylus": "^0.42"
   }
 }
