Modularize the Gruntfile and make it user-overridable

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "grunt-requirejs": "*",
     "grunt-svgmin": "*",
     "grunt-wrap": "*",
+    "load-grunt-tasks": "0.3.x",
     "stylus": "^0.42"
   }
 }
