--- a/package.json
+++ b/package.json
@@ -9,24 +9,24 @@
     "start": "lsc server.ls"
   },
   "dependencies": {
-    "buffet": "*",
-    "connect": "2.x",
-    "LiveScript": "1.2.x"
+    "buffet": "0.6",
+    "connect": "2",
+    "LiveScript": "1.2"
   },
   "devDependencies": {
-    "connect-compiler": "*",
-    "grunt": "0.4.x",
-    "grunt-contrib-clean": "*",
-    "grunt-contrib-concat": "*",
-    "grunt-contrib-copy": "*",
-    "grunt-contrib-cssmin": "*",
-    "grunt-contrib-stylus": "*",
-    "grunt-gh-pages": "*",
-    "grunt-lsc": "*",
-    "grunt-requirejs": "*",
-    "grunt-svgmin": "*",
-    "grunt-wrap": "*",
-    "load-grunt-tasks": "0.3.x",
-    "stylus": "^0.42"
+    "stylus": "0.46",
+    "connect-compiler": "0.1.3",
+    "grunt": "0.4",
+    "grunt-contrib-stylus": "0.17",
+    "grunt-lsc": "~1.0.1",
+    "grunt-contrib-clean": "",
+    "grunt-contrib-concat": "",
+    "grunt-contrib-copy": "",
+    "grunt-contrib-cssmin": "",
+    "grunt-gh-pages": "",
+    "grunt-requirejs": "",
+    "grunt-svgmin": "",
+    "grunt-wrap": "",
+    "load-grunt-tasks": ""
   }
 }
