--- a/package.json
+++ b/package.json
@@ -5,17 +5,12 @@
   "description": "Map of the members of the forum thread for xkcd #1190",
   "author": "Aluísio Augusto Silva Gonçalves <aasg@chirpingmustard.com>",
   "license": "MPL-2.0",
-  "scripts": {
-    "start": "lsc server.ls"
-  },
-  "dependencies": {
-    "buffet": "0.6",
-    "connect": "2",
-    "LiveScript": "1.2"
-  },
   "devDependencies": {
+    "LiveScript": "1.2",
     "stylus": "0.46",
     "connect-compiler": "0.1.3",
+    "grunt-contrib-connect": "0.8",
+
     "grunt": "0.4",
     "grunt-contrib-stylus": "0.17",
     "grunt-lsc": "~1.0.1",
