--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "Leaflet"]
 	path = vendor/leaflet
 	url = https://github.com/Leaflet/Leaflet.git
+	ignore = dirty
 [submodule "Leaflet.GeoSearch"]
 	path = vendor/leaflet-geosearch
 	url = https://github.com/smeijer/L.GeoSearch.git
