Move to Jake as build system
Jake, unlike Grunt, supports task dependencies, which we definitely
are in need of, so things like 8c890ca don't happen again.

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
 # Build artifacts
-/.grunt/
 /build/
 /dist/
 
 # Third-party components
 /node_modules/
 
-# Editor files
+# Editor and others files
 *~
 *.swp
+.fuse_hidden*
 
 # User configuration
-/grunt/userconfig/
+/build-config.ls
