--- a/.gitmodules
+++ b/.gitmodules
@@ -23,6 +23,9 @@
 [submodule "Leaflet.Control.Search"]
 	path = vendor/leaflet-search
 	url = https://github.com/stefanocudini/leaflet-search.git
+[submodule "almond"]
+	path = vendor/almond
+	url = https://github.com/jrburke/almond.git
 [submodule "CSSAnimEvent"]
 	path = vendor/cssanimevent
 	url = https://github.com/magnetikonline/cssanimevent.git
