--- a/package.json
+++ b/package.json
@@ -8,19 +8,11 @@
   "devDependencies": {
     "LiveScript": "1.2",
     "stylus": "0.46",
-    "connect-compiler": "0.1.3",
-    "grunt-contrib-connect": "0.8",
-
-    "grunt": "0.4",
-    "grunt-contrib-stylus": "0.17",
-    "grunt-lsc": "~1.0.1",
-    "grunt-contrib-clean": "",
-    "grunt-contrib-concat": "",
-    "grunt-contrib-copy": "",
-    "grunt-contrib-cssmin": "",
-    "grunt-gh-pages": "",
-    "grunt-requirejs": "",
-    "grunt-svgmin": "",
-    "load-grunt-tasks": ""
+    "requirejs": "~2.1.10",
+    "clean-css": "2.2",
+    "svgo": "~0.4.5",
+    "gh-pages": "0.2",
+    "then-fs": "^1.0.6",
+    "promise": "5"
   }
 }
