Switch Jakefile to LiveScript
This requires post-v8.0.12 Jake (i.e. including jakejs/jake#289)
as well as LiveScript installed globally, so instead we include
it in our `devDependencies`.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "description": "Map of the members of the forum thread for xkcd #1190",
   "author": "Aluísio Augusto Silva Gonçalves <aasg@chirpingmustard.com>",
   "license": "MPL-2.0",
+  "scripts": {
+    "build": "jake"
+  },
   "devDependencies": {
+    "jake": "jakejs/jake#e6173e7",
     "LiveScript": "1.2",
     "stylus": "0.48",
     "requirejs": "~2.1.10",
