--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "LiveScript": "1.3",
     "stylus": "0 >=0.48",
     "requirejs": "~2.1.10",
-    "clean-css": "2.2",
+    "clean-css": "^3.2.2",
     "svgo": "0.5",
     "gh-pages": "0.2",
     "then-fs": "^1.0.7",
