--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "then-fs": "^1.0.7",
     "promise": "6",
     "connect": "^3.2",
-    "serve-static": "^1.6.1"
+    "serve-static": "^1.6.1",
+    "morgan": "^1.5.2"
   }
 }
