--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "build": "jake"
   },
   "devDependencies": {
-    "jake": "jakejs/jake#e6173e7",
-    "LiveScript": "1.3",
+    "jake": "AluisioASG/jake#2cff463",
+    "livescript": "1.4",
     "stylus": "0 >=0.48",
     "requirejs": "~2.1.10",
     "clean-css": "^3.2.2",
     "svgo": "0.5",
-    "gh-pages": "0.2",
+    "gh-pages": "0.3",
     "then-fs": "^1.0.7",
     "promise": "6",
     "connect": "^3.2",
