Add leaflet-markercluster to build process
The version published in the repository is over 1 year old.  It's time
for us to roll it ourselves.

--- a/.gitmodules
+++ b/.gitmodules
@@ -8,6 +8,7 @@
 [submodule "Leaflet.markercluster"]
 	path = vendor/leaflet-markercluster
 	url = https://github.com/Leaflet/Leaflet.markercluster.git
+	ignore = dirty
 [submodule "Leaflet-providers"]
 	path = vendor/leaflet-providers
 	url = https://github.com/leaflet-extras/leaflet-providers.git
