Review Git repository settings
Let Git decide on what's a text file (for now) and don't clutter the
project's .gitignore with per-editor state files.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,18 +1,1 @@
-# This file is used to set up line ending normalization.  We begin
-# by specifying that files not mentioned here should not be touched.
-* -text
-
-# Now we mark the .git* files and other non-source text files at the
-# root of the repository.
-/.git* text
-/Jakefile.coffee text
-/package.json text
-/LICENSE text
-/*.md text
-/vendor/VERSIONS text
-
-# Finally, we tag our source code files.
-*.html text
-*.ls text
-*.styl text
-*.svg text
+* text=auto
