--- a/package.json
+++ b/package.json
@@ -6,20 +6,21 @@
   "author": "Aluísio Augusto Silva Gonçalves <aasg@chirpingmustard.com>",
   "license": "MPL-2.0",
   "scripts": {
-    "build": "jake"
+    "start": "webpack"
   },
   "devDependencies": {
-    "clean-css": "^3.2.2",
-    "connect": "^3.2",
-    "gh-pages": "^0.12.0",
-    "jake": "~8.0.14",
-    "livescript": "1.4",
-    "morgan": "^1.5.2",
-    "promise": "7",
-    "requirejs": "~2.3.0",
-    "serve-static": "^1.6.1",
-    "stylus": "0 >=0.48",
-    "svgo": "^0.7.0",
-    "then-fs": "2"
+    "@types/firebase": "^2.4.30",
+    "@types/leaflet": "0.7",
+    "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "git-describe": "^4.0.1",
+    "html-loader": "^0.4.4",
+    "html-webpack-plugin": "^2.24.1",
+    "raw-loader": "^0.5.1",
+    "style-loader": "^0.13.1",
+    "ts-loader": "^1.3.3",
+    "typescript": "2.1",
+    "webpack": "^1.14.0"
   }
 }
