--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "author": "Aluísio Augusto Silva Gonçalves <aasg@chirpingmustard.com>",
   "license": "MPL-2.0",
   "scripts": {
-    "start": "webpack"
+    "start": "webpack",
+    "lint": "tslint --project .",
+    "lint-full": "tslint --project . --config tslint-typecheck.json --type-check"
   },
   "devDependencies": {
     "@types/firebase": "^2.4.30",
@@ -19,6 +21,7 @@
     "raw-loader": "^0.5.1",
     "style-loader": "^0.13.1",
     "ts-loader": "^1.3.3",
+    "tslint": "^4.1.1",
     "typescript": "2.1",
     "webpack": "^1.14.0"
   }
