--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "devDependencies": {
     "@types/firebase": "^2.4.30",
+    "@types/pouchdb": "^5.4.28",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "git-describe": "^4.0.1",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.24.1",
+    "pouchdb": "^6.1.0",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.13.1",
     "ts-loader": "^1.3.3",
