--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "firebase": "2.4.2",
     "git-describe": "^4.0.1",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.24.1",
+    "leaflet-providers": "^1.1.16",
+    "leaflet-search": "^2.7.0",
+    "picomodal": "^3.0.0",
     "pouchdb": "^6.1.0",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.13.1",
