--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Aluísio Augusto Silva Gonçalves <aasg@chirpingmustard.com>",
   "license": "MPL-2.0",
   "scripts": {
+    "deps": "jake",
     "start": "webpack",
     "lint": "tslint --project .",
     "lint-full": "tslint --project . --config tslint-typecheck.json --type-check"
@@ -20,6 +21,7 @@
     "git-describe": "^4.0.1",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.24.1",
+    "jake": "^8.0.15",
     "leaflet-providers": "^1.1.16",
     "leaflet-search": "^2.7.0",
     "picomodal": "^3.0.0",
