--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "author": "Aluísio Augusto Silva Gonçalves <aasg@chirpingmustard.com>",
   "license": "MPL-2.0",
   "scripts": {
+    "start": "webpack-dev-server --content-base build/",
     "deps": "jake",
-    "start": "webpack",
+    "build": "webpack",
     "lint": "tslint --project .",
     "lint-full": "tslint --project . --config tslint-typecheck.json --type-check"
   },
@@ -31,6 +32,7 @@
     "ts-loader": "^1.3.3",
     "tslint": "^4.1.1",
     "typescript": "2.1",
-    "webpack": "^1.14.0"
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2"
   }
 }
