--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "raw-loader": "^0.5.1",
     "style-loader": "^0.13.1",
     "ts-loader": "^1.3.3",
-    "tslint": "^4.1.1",
+    "tslint": "4.2",
     "typescript": "2.1",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
