--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.24.1",
     "jake": "^8.0.15",
+    "leaflet-geosearch": "^2.0.0",
     "leaflet-providers": "^1.1.16",
     "leaflet-search": "^2.7.0",
+    "nodent-runtime": "^3.0.3",
     "picomodal": "^3.0.0",
     "pouchdb": "^6.1.0",
     "raw-loader": "^0.5.1",
