--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@types/firebase": "^2.4.30",
+    "@types/lodash.debounce": "^4.0.0",
     "@types/pouchdb": "^5.4.28",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -26,6 +27,7 @@
     "leaflet-geosearch": "^2.0.0",
     "leaflet-providers": "^1.1.16",
     "leaflet-search": "^2.7.0",
+    "lodash.debounce": "^4.0.8",
     "nodent-runtime": "^3.0.3",
     "picomodal": "^3.0.0",
     "pouchdb": "^6.1.0",
