--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint-full": "tslint --project . --config tslint-typecheck.json --type-check"
   },
   "devDependencies": {
+    "@types/lodash.clamp": "^4.0.0",
     "@types/lodash.debounce": "^4.0.0",
     "@types/pouchdb": "^5.4.28",
     "css-loader": "^0.26.1",
@@ -25,6 +26,7 @@
     "leaflet-geosearch": "^2.0.0",
     "leaflet-providers": "^1.1.16",
     "leaflet-search": "^2.7.0",
+    "lodash.clamp": "^4.0.3",
     "lodash.debounce": "^4.0.8",
     "nodent-runtime": "^3.0.3",
     "picomodal": "^3.0.0",
