--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint-full": "tslint --project . --config tslint-typecheck.json --type-check"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.0.41",
     "@types/lodash.clamp": "^4.0.0",
     "@types/lodash.debounce": "^4.0.0",
     "@types/pouchdb": "^5.4.28",
