--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "start": "webpack-dev-server --content-base build/",
     "deps": "jake",
     "build": "webpack",
-    "lint": "tslint --project .",
-    "lint-full": "tslint --project . --config tslint-typecheck.json --type-check"
+    "lint": "tslint --project . --exclude \"build/**\" --exclude \"vendor/**\" --exclude \"node_modules/**\""
   },
   "devDependencies": {
     "@types/leaflet": "^1.0.41",
