--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "pouchdb": "^6.1.0",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.13.1",
+    "svgo-loader": "^1.1.2",
     "ts-loader": "^1.3.3",
     "tslint": "4.2",
     "typescript": "2.1",
